--- a/app/src/main/res/layout/custom_edit_dialog.xml
+++ b/app/src/main/res/layout/custom_edit_dialog.xml
@@ -4,14 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:orientation="vertical">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:fontFamily="sans-serif"
-        android:hint="Book Name"
-        android:textSize="15dp"
-        android:textColor="@color/black"
-        android:id="@+id/editBookName"/>
+
 
     <EditText
         android:layout_width="match_parent"
@@ -41,9 +34,9 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/ficRadio"
+            android:id="@+id/editficRadio"
             android:fontFamily="sans-serif"
-            android:text="editfiction"
+            android:text="fiction"
             android:textSize="15dp"
             android:layout_marginRight="10dp"/>
         <RadioButton
